@@ -5,6 +5,7 @@ Released on ...
 
 Fixes and improvements:
 - Rename MarkdownMimeType plugin to ProcessMarkdown
+- Remove .md extension from Markdown links and turn them into button if desired
 - Add language class to Markdown code blocks that do not specify a language
 - Turn Markdown tables into Semantic UI tables
 
